Add win/draw checks

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
+    <div class="game-announcement"></div>
     <div class="game-container">
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
-        <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
+      <button class="game-cell"></button>
     </div>
   </body>
 </html>
